WIP - Uplift September 2025 - Java & Gradle